--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ItemInspector</title>
-  <base href="https://ehboym.github.io">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="ehboym.github.io">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.b02e259a2c09a2229ef9.css"></head>
 <body">
